# himsha-network

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-pages.yml  rust-tests.yml
docker/scripts/: init-regtest.sh  smoke-test.sh
docs/: bitcoin-indexer-docker.md  bitcoin-indexer-k8s-terraform.md  decentralization.md  lightning.md  testing-locally.md  zkvm-proving.md
docs/deployment/: README.md  aws.md  azure.md  bare-metal.md  cost-estimates.md  gcp.md
docs/modules/: README.md
docs/use-cases/: README.md  ai-copilot.md  lend.md  prime.md  swap.md  yield-vaults.md
himsha-cli/: Cargo.toml
himsha-cli/src/: main.rs
himsha-methods/: Cargo.toml  build.rs
himsha-methods/guest/: Cargo.toml
himsha-methods/guest/src/: main.rs
himsha-methods/src/: lib.rs
himsha-node/: Cargo.toml
himsha-node/src/: bitcoin_indexer.rs  block_producer.rs  custody.rs  election.rs  execution.rs  follower.rs  lib.rs  lightning.rs  main.rs  rpc.rs  settlement.rs  settlement_tx.rs  state.rs
himsha-node/tests/: regtest_broadcast.rs
himsha-programs/ata/: Cargo.toml
himsha-programs/ata/src/: lib.rs
himsha-programs/lending/: Cargo.toml
himsha-programs/lending/src/: lib.rs
himsha-programs/money-market/: Cargo.toml
himsha-programs/money-market/src/: lib.rs
himsha-programs/nft-metadata/: Cargo.toml
himsha-programs/nft-metadata/src/: lib.rs
himsha-programs/oracle/: Cargo.toml
himsha-programs/oracle/src/: lib.rs
himsha-programs/runes/: Cargo.toml
himsha-programs/runes/src/: lib.rs
himsha-programs/swap/: Cargo.toml
himsha-programs/swap/src/: lib.rs
himsha-programs/system/: Cargo.toml
himsha-programs/system/src/: lib.rs
himsha-programs/token/: Cargo.toml
himsha-programs/token/src/: lib.rs
himsha-programs/vault/: Cargo.toml
himsha-programs/vault/src/: lib.rs
himsha-runtime/: Cargo.toml
himsha-runtime/src/: account.rs  compute.rs  cpi.rs  error.rs  exec.rs  instruction.rs  lib.rs  merkle.rs  owner.rs  pubkey.rs  receipt.rs  signature.rs  transaction.rs  utxo.rs
himsha-sdk/: jest.config.js  package-lock.json  package.json
himsha-sdk-dart/: pubspec.yaml
himsha-sdk-dart/lib/: him_sdk.dart  himsha_sdk.dart
himsha-sdk-dart/lib/src/: connection.dart  pubkey.dart  state_proof.dart  transaction.dart
himsha-sdk-dart/lib/src/programs/: lending.dart  swap.dart  system.dart  token.dart
himsha-sdk-dart/test/: sdk_test.dart
himsha-sdk-python/: pyproject.toml
himsha-sdk-python/himsha_sdk/: __init__.py  connection.py  pubkey.py  state_proof.py  transaction.py
himsha-sdk-python/himsha_sdk/programs/: __init__.py  lending.py  swap.py  system.py  token.py
himsha-sdk-python/tests/: test_programs.py  test_pubkey.py  test_state_proof.py  test_transaction.py
himsha-sdk/examples/: yield-keeper.ts
himsha-sdk/src/: connection.ts  index.ts  pubkey.ts  stateProof.ts  transaction.ts  types.ts
himsha-sdk/src/__tests__/: confirm.test.ts  programs.test.ts  pubkey.test.ts  stateProof.test.ts  stateProofConnection.test.ts  transaction.test.ts
himsha-sdk/src/programs/: lending.ts  moneyMarket.ts  oracle.ts  runes.ts  swap.ts  system.ts  token.ts  vault.ts
himsha-threshold/: Cargo.toml
himsha-threshold/src/: lib.rs  taproot.rs
himsha-vm/: Cargo.toml
himsha-vm/src/: dispatch.rs  executor.rs  lib.rs  registry.rs  zk.rs
landing/: .gitignore  index.html  package-lock.json  package.json  prerender.mjs  vite.config.js
landing/public/: llms.txt  robots.txt  site.webmanifest  sitemap.xml
landing/src/: App.jsx  entry-server.jsx  index.css  main.jsx
website/: HANDOFF.md  bitcoin-indexer-docker.html  bitcoin-indexer-k8s.html  build-docs.py  index.html  llms.txt  robots.txt  sitemap.xml  tutorials.html
website/assets/css/: docs.css  main.css  tutorials.css
website/assets/i18n/: de.json  en.json  es.json  fr.json  hi.json  ja.json  kn.json  ta.json  te.json  zh-Hans.json
website/assets/js/: docs.js  i18n.js  main.js  tutorials.js
