[workspace]
resolver = "2"
members = [
    "himsha-runtime",
    "himsha-vm",
    "himsha-node",
    "himsha-programs/system",
    "himsha-programs/token",
    "himsha-programs/ata",
    "himsha-programs/swap",
    "himsha-programs/lending",
    "himsha-programs/nft-metadata",
    "himsha-programs/runes",
    "himsha-programs/money-market",
    "himsha-programs/vault",
    "himsha-programs/oracle",
    "himsha-threshold",
    "himsha-cli",
]

# RISC Zero guest crates: built only with `--features zkvm` (needs the RISC Zero
# toolchain). Kept out of the default workspace build. See docs/zkvm-proving.md.
exclude = [
    "himsha-methods",
]

[workspace.dependencies]
himsha-runtime = { path = "himsha-runtime" }
borsh        = { version = "1.5", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
anyhow       = "1"
tokio        = { version = "1", features = ["full"] }
tracing      = "0.1"
hex          = "0.4"
sha2         = "0.10"
bs58         = "0.5"
rand         = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
