[package]
name    = "himsha-cli"
version = "0.1.0"
edition = "2021"
description = "HIMSHA Network CLI — deploy programs, manage accounts, submit transactions"

[[bin]]
name = "himsha"
path = "src/main.rs"

[dependencies]
himsha-runtime = { workspace = true }
borsh       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
hex         = { workspace = true }

clap        = { version = "4", features = ["derive"] }
reqwest     = { version = "0.11", features = ["json"] }
dirs        = "5"
toml        = "0.8"
