[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "himsha-sdk"
version = "0.1.0"
description = "Python SDK for HIMSHA Network — ZK-proven Bitcoin programmability layer"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "base58>=2.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
