[package]
name    = "himsha-oracle-program"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "Signed price-feed oracle for HIMSHA Network — an authority posts fresh prices that other programs consume"

[dependencies]
himsha-runtime = { workspace = true }
borsh          = { workspace = true }
